added the second and the third blog

--- a/index.html
+++ b/index.html
@@ -5,14 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Simple Website</title>
     <link rel="stylesheet" href="styles/Blog.css">
-    
+
 </head>
 <body>
     <div>
-<h3>My First Website</h3>
+<h3>My First blog</h3>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, consequatur! Nemo dignissimos, maxime dolorum assumenda eaque voluptatum quasi ipsa dolor voluptatibus beatae illo mollitia dolores similique, pariatur voluptatem, atque quis.</p>
 
 
     </div>
+    <div>
+<h3>My second blog</h3>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, consequatur! Nemo dignissimos, maxime dolorum assumenda eaque voluptatum quasi ipsa dolor voluptatibus beatae illo mollitia dolores similique, pariatur voluptatem, atque quis.</p>
+
+
+    </div>
+    <div>
+<h3>My third blog</h3>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, consequatur! Nemo dignissimos, maxime dolorum assumenda eaque voluptatum quasi ipsa dolor voluptatibus beatae illo mollitia dolores similique, pariatur voluptatem, atque quis.</p>
+
+
+    </div>
+   
 </body>
 </html>
