--- a/index.html
+++ b/index.html
@@ -26,6 +26,18 @@
 
 
     </div>
+    <div>
+<h3>You to push incremental code</h3>
+<ul>
+<li>git add .</li>
+<li>git commit -m"add a meaningful commit message"</li>
+<li>git push</li>
+
+
+</ul>
+
+
+    </div>
    
 </body>
 </html>
