red is awesome color

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
 
 
     </div>
-   
+   <div>
+    <h3>red is awesome color</h3>
+    <img src="images/red.jpg" alt="">
+   </div>
 </body>
 </html>
